# GeometryDashSDK

./: LICENSE  README.md
projects/: info.txt
projects/test_proj/: CMakeLists.txt
template/: .gitignore  CMakeLists.txt
template/src/: main.cpp
tools/: create_project.py
